# rpi-pwm-api-mock

./: .gitignore  README.md  pyproject.toml  test.py
app/: app.py  defaults.py  envflags.py  run.py
app/api/: encoder.py  security.py  specification.yaml  util.py
app/api/controllers/: default_controller.py  security_controller_.py
app/api/endpoints/app/: config.py
app/api/handlers/app/: config.py  fanCurves.py  logs.py  tempDCHistory.py
app/api/handlers/system/: info.py  topTenProcesses.py
app/api/models/: __init__.py  app_config.py  app_config_app.py  app_config_pwm.py  app_fan_curve.py  app_fan_curve_all_of.py  app_fan_curve_base.py  app_fan_curve_complete.py  app_fan_curve_complete_one_of.py  app_fan_curve_series_point.py  app_fan_curve_update.py  app_fan_curve_update_one_of.py  app_log_entry.py  app_temp_dc_history_entry.py  base_model_.py  http_error.py  system_info.py  system_process.py  system_stats.py
app/api/openapi/: openapi.yaml
app/api/test/: __init__.py  test_default_controller.py
app/common/: decorators.py
app/core/: app.py  backend.py  envflags.py  pwm.py
app/core/utils/: logger.py
app/web/: backend.py
app/web/api/: encoder.py  models.py  openapi.yaml  schemas.py  types_mapper.py  util.py
app/web/api/controllers/: api_controller.py  default_controller.py  utils.py  (+2 more)
app/web/logic/: history.py  stats.py  sysinfo.py
app/web/persistence/: db.py  entities.py  repos.py  repositories.py
docs/: commands.txt  openapi-commands.txt  rpi-pwm.postman_collection.json  rpi-pwm_pres.postman_collection.json
openapi/: api.yaml  rpi-pwm.yaml
(+20 files in other folders)
