[project]
name = "rpi-pwm"
version = "1.0.0"
description = "PWM based fan controller for RPi CPU coolers connected via GPIO"
authors = [
    {name = "therealthingy"},
]
dependencies = [
    "connexion[swagger-ui]~=2.9",
    "flask-sqlalchemy~=2.5",
    "flask-marshmallow~=0.14",
    "marshmallow-sqlalchemy~=0.26",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "GNU AGPLv3"}

[project.urls]
homepage = "https://github.com/therealthingy/rpi-pwm"

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "flask-testing~=0.8",
]
